--- a/src/web/calorie-bank/conf/application.conf
+++ b/src/web/calorie-bank/conf/application.conf
@@ -33,10 +33,20 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
+db.default.user=sa
+db.default.password=""
+
+#### ENABLE FOR SQLITE SUPPORT
+######
+#db.default.driver=org.sqlite.JDBC
+#db.default.url="jdbc:sqlite:/path/to/db-file"
+######
+#db.default.driver="org.sqlite.JDBC"
+#db.default.url="jdbc:sqlite:/Users/caw/Projects/calorie-bank/src/web/calorie-bank/public/dbtest.sqlite"
+#db.default.user="sa"
+#db.default.password=""
 
 # Evolutions
 # ~~~~~
