--- a/src/web/calorie-bank/conf/securesocial.conf
+++ b/src/web/calorie-bank/conf/securesocial.conf
@@ -125,8 +125,8 @@ securesocial {
         facebook {
                 authorizationUrl="https://graph.facebook.com/oauth/authorize"
                 accessTokenUrl="https://graph.facebook.com/oauth/access_token"
-                clientId=your_client_id
-                clientSecret=your_client_secret
+                clientId="675529239147961"
+                clientSecret="a244457ab554b028fd72bb90ebd0e65a"
                 # this scope is the minimum SecureSocial requires.  You can add more if required by your app.
                 scope=email
         }
